<resources>
    <string name="app_name">Troopa</string>


    <!-- Strings for On Boarding Screen -->

    <string name="let_get_started">Lets Get Started</string>
    <string name="desc">walk through image</string>
    <string name="signinbtn">Sign In</string>
    <string name="contbtn">Continue</string>
    <string name="image_description">Logo image</string>
    <string name="newregister">Don\'t have an account?</string>
    <string name="registerText">Register</string>
    <string name="login">Login</string>
    <string name="start">Lets kick start</string>
    <string name="paytype">\@</string>
    <string name="nigeria_code">+234</string>
    <string name="_000_000_000">000 000 000</string>
    <string name="phone_login">Login</string>
    <string name="confirm_phone_desc">Continue with phone number</string>
    <string name="phone_digit">You will recieve a 4-digit code to verify next</string>
    <string name="phone_digit_msgs">Enter your phone number</string>
    <string name="pnumber">Phone Number</string>
    <string name="test_no">08000000000000</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="GoogleApi">AIzaSyCGPDz4LFZeTDm_nSFZVpqVmRvaNP6UpF8</string>
    <string name="title_activity_first_map">first_map</string>
    <string name="menu_open">Open</string>
    <string name="close_menu">close</string>
    <string name="pickup">at pick up location</string>
    <string name="start_delivery_text">Start Delivery</string>
    <string name="confirm_delivery_text">Confirm Delivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>