<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rider.troopadelivery.troopa.easy_login">

    <ImageView
        android:id="@+id/troopa"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/image_description"
        android:paddingTop="40dp"
        app:srcCompat="@drawable/troppa_logo"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:padding="60dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_login"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="35dp"
            android:fontFamily="@font/montserrat"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/errormsg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"

                android:text=""
                android:fontFamily="@font/montserrat"
                tools:ignore="HardcodedText"
                android:textColor="@color/red"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:id="@+id/phonetext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pnumber"
                android:fontFamily="@font/montserrat"
                tools:ignore="HardcodedText" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/field_background">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="13dp"
                android:paddingLeft="13dp"
                app:srcCompat="@drawable/flag"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nigeria_code"
                android:textSize="14sp"
                android:paddingLeft="10dp"
                />

            <EditText
                android:id="@+id/phone_numbers"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/_000_000_000"
                android:inputType="number"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:background="@drawable/edittext_bg"
                android:importantForAutofill="no"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/verify_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="14dp"


            android:text="Verify Phone number"
            android:paddingTop="10dp"
            android:textColor="@color/orange"
            android:fontFamily="@font/montserrat"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            android:layout_marginBottom="10dp"
            >
            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Password"
                tools:ignore="HardcodedText"
                android:fontFamily="@font/montserrat"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/field_background">


            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="13dp"
                android:paddingLeft="13dp"
                app:srcCompat="@drawable/ic_baseline_key_24"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText" />



            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="******"
                android:inputType="textPassword"
                android:gravity="center"
                android:background="@drawable/edittext_bg"
                android:importantForAutofill="no"
                android:fontFamily="@font/montserrat"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="14dp"


            android:text="Forgot Password"
            android:paddingTop="10dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/orange"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >
            <Button
                android:id="@+id/login"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:background="@drawable/round_button"
                android:fontFamily="@font/montserrat"
                />


            <ProgressBar
                android:id="@+id/idLoadingPB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>






    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>